--- a/US Map/State Map.html
+++ b/US Map/State Map.html
@@ -11,10 +11,10 @@
       fill: white;
       text-anchor: middle;
       font-size: 14px;
-      font-family: sans-serif;
-      font-weight: 700;
-      stroke: black;
-      stroke-width: 0.75;
+      font-weight: 600;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      paint-order: stroke fill;
+      stroke-width: 2;
     }
 
     .state-name {
@@ -97,85 +97,84 @@
   <script src="https://d3js.org/topojson.v2.min.js"></script>
   <script>
 
-    function legend({
-      color,
-      title,
-      tickSize = 6,
-      width = 300,
-      height = 44 + tickSize,
-      marginTop = 18,
-      marginRight = 0,
-      marginBottom = 16 + tickSize,
-      marginLeft = 0,
-      ticks = width / 64,
-      tickFormat,
-      tickValues
-    } = {}) {
+    // function legend({
+    //   color,
+    //   title,
+    //   tickSize = 6,
+    //   width = 300,
+    //   height = 44 + tickSize,
+    //   marginTop = 18,
+    //   marginRight = 0,
+    //   marginBottom = 16 + tickSize,
+    //   marginLeft = 0,
+    //   ticks = width / 64,
+    //   tickFormat,
+    //   tickValues
+    // } = {}) {
 
-      const svg = d3.create("svg")
-        .attr("width", width)
-        .attr("height", height)
-        .attr("viewBox", [0, 0, width, height])
-        .style("overflow", "visible")
-        .style("display", "block");
+    //   const svg = d3.create("svg")
+    //     .attr("width", width)
+    //     .attr("height", height)
+    //     .attr("viewBox", [0, 0, width, height])
+    //     .style("overflow", "visible")
+    //     .style("display", "block");
 
-      let tickAdjust = g => g.selectAll(".tick line").attr("y1", marginTop + marginBottom - height);
-      let x;
+    //   let tickAdjust = g => g.selectAll(".tick line").attr("y1", marginTop + marginBottom - height);
+    //   let x;
 
-      {
-        x = d3.scaleBand()
-          .domain(color.domain())
-          .rangeRound([marginLeft, width - marginRight]);
+    //   {
+    //     x = d3.scaleBand()
+    //       .domain(color.domain())
+    //       .rangeRound([marginLeft, width - marginRight]);
 
-        svg.append("g")
-          .selectAll("rect")
-          .data(color.domain())
-          .join("rect")
-          .attr("x", x)
-          .attr("y", marginTop)
-          .attr("width", Math.max(0, x.bandwidth() - 1))
-          .attr("height", height - marginTop - marginBottom)
-          .attr("fill", color);
+    //     svg.append("g")
+    //       .selectAll("rect")
+    //       .data(color.domain())
+    //       .join("rect")
+    //       .attr("x", x)
+    //       .attr("y", marginTop)
+    //       .attr("width", Math.max(0, x.bandwidth() - 1))
+    //       .attr("height", height - marginTop - marginBottom)
+    //       .attr("fill", color);
 
-        tickAdjust = () => { };
-      }
+    //     tickAdjust = () => { };
+    //   }
 
-      svg.append("g")
-        .attr("transform", `translate(0,${height - marginBottom})`)
-        .call(d3.axisBottom(x)
-          .ticks(ticks, typeof tickFormat === "string" ? tickFormat : undefined)
-          .tickFormat(typeof tickFormat === "function" ? tickFormat : undefined)
-          .tickSize(tickSize)
-          .tickValues(tickValues))
-        .call(tickAdjust)
-        .call(g => g.select(".domain").remove())
-        .call(g => g.append("text")
-          .attr("x", marginLeft)
-          .attr("y", marginTop + marginBottom - height - 6)
-          .attr("fill", "currentColor")
-          .attr("text-anchor", "start")
-          .attr("font-weight", "bold")
-          .text(title));
+    //   svg.append("g")
+    //     .attr("transform", `translate(0,${height - marginBottom})`)
+    //     .call(d3.axisBottom(x)
+    //       .ticks(ticks, typeof tickFormat === "string" ? tickFormat : undefined)
+    //       .tickFormat(typeof tickFormat === "function" ? tickFormat : undefined)
+    //       .tickSize(tickSize)
+    //       .tickValues(tickValues))
+    //     .call(tickAdjust)
+    //     .call(g => g.select(".domain").remove())
+    //     .call(g => g.append("text")
+    //       .attr("x", marginLeft)
+    //       .attr("y", marginTop + marginBottom - height - 6)
+    //       .attr("fill", "currentColor")
+    //       .attr("text-anchor", "start")
+    //       .attr("font-weight", "bold")
+    //       .text(title));
 
-      return svg.node();
-    }
+    //   return svg.node();
+    // }
 
     function initialize_map(state_ev) {
       d3.json("states-albers-10m.json").then(function (us) {
 
         const map = svg.append("g")
 
-        map.append("g")
+        const gs = map.append("g")
           .attr("stroke", "white")
           .attr("stroke-width", 1)
           .attr("stroke-linecap", "round")
           .attr("stroke-linejoin", "round")
           .attr("class", "states")
-          .selectAll("path")
+          .selectAll("g")
           .data(topojson.feature(us, us.objects.states).features)
-          .enter().append("path")
-          .attr("d", path)
-          .attr("fill", function (d) { return fillColor(state_ev.get(d.properties.name).bins); })
+          .enter()
+          .append("g")
           .on("mouseover", function (event, d, i) {
             d3.select(this).attr("stroke", "black").attr("stroke-width", 3).raise();
             tooltip.style("display", "block");
@@ -187,19 +186,23 @@
             tooltip
               .style("top", (event.pageY + 30) + "px")
               .style("left", (event.pageX - measuredWidth / 2) + "px");
+              console.log("yo");
           })
           .on("mouseout", function (event, d, i) {
             d3.select(this).attr("stroke", null).attr("stroke-width", 1).lower()
             tooltip.style("display", "none");
           });
 
-        map.append("g")
-          .attr("class", "abbrevs")
-          .selectAll("text")
-          .data(topojson.feature(us, us.objects.states).features)
-          .enter()
-          .append("svg:text")
+        gs.append("path")
+          .attr("d", path)
+          .attr("fill", function (d) { return fillColor(state_ev.get(d.properties.name).winstate_chal); });
+
+        gs.append("svg:text")
           .text((d) => state_ev.get(d.properties.name).abbrev)
+            .attr("stroke", "none")
+            .attr("class", "abbrevs")
+            .attr("fill", function(d) { return ( state_ev.get(d.properties.name).winstate_inc > 0.85 || state_ev.get(d.properties.name).winstate_chal > 0.85 ? "white" : "white"); })
+            .attr("stroke", function(d) { return ( state_ev.get(d.properties.name).winstate_inc > 0.85 || state_ev.get(d.properties.name).winstate_chal > 0.85 ? "black" : "black"); })
             .attr("x", (d) => path.centroid(d)[0])
             .attr("y", (d) => path.centroid(d)[1]);
 
@@ -229,9 +232,13 @@
       console.log(state_ev.values());
     })
 
-    const fillColor = d3.scaleOrdinal()
-      .domain(["safe_red", "likely_red", "tossup", "likely_blue", "safe_blue"])
-      .range(["#cc3d3d", "#E7A09C", "#e6e6e6", "#8FCCE0", "#1a80c4"])
+    // const fillColor = d3.scaleOrdinal()
+    //   .domain(["safe_red", "likely_red", "tossup", "likely_blue", "safe_blue"])
+    //   .range(["#cc3d3d", "#E7A09C", "#e6e6e6", "#8FCCE0", "#1a80c4"])
+
+    const fillColor = d3.scaleLinear()
+      .domain([0.05, 0.5, 0.95])
+      .range(["#cc3d3d", "#e6e6e6", "#1a80c4"])
 
     const svg = d3.select("svg");
     const path = d3.geoPath();
