--- a/US Map/State Map.html
+++ b/US Map/State Map.html
@@ -11,10 +11,10 @@
       fill: white;
       text-anchor: middle;
       font-size: 14px;
-      font-weight: 600;
+      font-weight: 500;
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
       paint-order: stroke fill;
-      stroke-width: 2;
+      stroke-width: 2.5;
     }
 
     .state-name {
@@ -39,11 +39,11 @@
     }
 
     .cell-colorblock-biden {
-      background-color: #1a80c4;
+      background-color: #1B6CE5;
     }
 
     .cell-colorblock-trump {
-      background-color: #cc3d3d;
+      background-color: #EF3D3D;
       padding-top: 3px;
     }
 
@@ -91,7 +91,10 @@
 </head>
 
 <body>
-  <svg width="960" height="700"></svg>
+  <button type="button" onclick="toggleMap('#e6e6e6')">Grey</button>
+  <button type="button" onclick="toggleMap('red')">Red</button>
+  <p> hello this is where we will put instructions, buttons and other cool stuff</p>
+  <svg width="1000" height="700"></svg>
   <div class="tooltip"></div>
   <script src="https://d3js.org/d3.v6.min.js"></script>
   <script src="https://d3js.org/topojson.v2.min.js"></script>
@@ -163,7 +166,36 @@
     function initialize_map(state_ev) {
       d3.json("states-albers-10m.json").then(function (us) {
 
-        const map = svg.append("g")
+        const eastCoast = new Map();
+
+        const eastCoastValues = ["DC", "MD", "DE", "NJ", "NY", "CT", "RI", "MA", "VT", "NH"];
+
+        state_ev.forEach((value, key) => {
+          if (eastCoastValues.indexOf(value.abbrev) !== -1) {
+            eastCoast.set(key, value);
+          }
+          else {
+            console.log("bruh");
+          }
+        });
+
+        console.log(eastCoast);
+
+        const width = 1000;
+        const blockSize = 25;
+
+        const toggleMap = function (color) {
+          states.style("fill", color)
+          //states.style("display", "none")
+          bubbles.style("display", "block")
+        };
+        const toggleMapReverse = function (color) {
+          states.style("fill", color)
+          //states.style("display", "none")
+          bubbles.style("display", "none")
+        };
+
+        const map = svg.append("g");
 
         const gs = map.append("g")
           .attr("stroke", "white")
@@ -186,38 +218,131 @@
             tooltip
               .style("top", (event.pageY + 30) + "px")
               .style("left", (event.pageX - measuredWidth / 2) + "px");
-              console.log("yo");
           })
           .on("mouseout", function (event, d, i) {
             d3.select(this).attr("stroke", null).attr("stroke-width", 1).lower()
             tooltip.style("display", "none");
+            // bubbles.attr("stroke", "black").attr("stroke-width", 3)
+          })
+          .on("click", function (event) {
+            console.log("yo");
           });
 
-        gs.append("path")
+        const states = gs.append("path")
           .attr("d", path)
+          // .attr("fill", "#e6e6e6")
           .attr("fill", function (d) { return fillColor(state_ev.get(d.properties.name).winstate_chal); });
 
-        gs.append("svg:text")
-          .text((d) => state_ev.get(d.properties.name).abbrev)
-            .attr("stroke", "none")
-            .attr("class", "abbrevs")
-            .attr("fill", function(d) { return ( state_ev.get(d.properties.name).winstate_inc > 0.85 || state_ev.get(d.properties.name).winstate_chal > 0.85 ? "white" : "white"); })
-            .attr("stroke", function(d) { return ( state_ev.get(d.properties.name).winstate_inc > 0.85 || state_ev.get(d.properties.name).winstate_chal > 0.85 ? "black" : "black"); })
-            .attr("x", (d) => path.centroid(d)[0])
-            .attr("y", (d) => path.centroid(d)[1]);
+        const bubbles = gs.append("circle")
+          .data(topojson.feature(us, us.objects.states).features)
+          .style("display", "none")
+          .attr("class", "bubbles")
+          .attr("fill", function (d) { return fillColor(state_ev.get(d.properties.name).winstate_chal); })
+          .attr("stroke", function (d) { return (state_ev.get(d.properties.name).winstate_inc > 0.85 || state_ev.get(d.properties.name).winstate_chal > 0.85 ? "rgba(0, 0, 0, 0.3)" : "rgba(0, 0, 0, 0.7)"); })
+          .attr("stroke-width", function (d) { return (state_ev.get(d.properties.name).winstate_inc > 0.85 || state_ev.get(d.properties.name).winstate_chal > 0.85 ? 1 : 2); })
+          // .attr("r", 25)
+          .attr("r", (d) => Math.sqrt(state_ev.get(d.properties.name).ev) * 5 + 3)
+          .attr("cx", (d) => path.centroid(d)[0])
+          .attr("cy", (d) => path.centroid(d)[1] - 5)
+          .on("mouseover", function (event, d, i) {
+            d3.select(this)
+              .attr("stroke", "black")
+              .attr("stroke-width", 3)
+              .transition()
+              .duration(200)
+              .attr("r", (d) => Math.sqrt(state_ev.get(d.properties.name).ev) * 5 + 5);
+          })
+          .on("mouseout", function (event, d, i) {
+            d3.select(this)
+              .attr("stroke", function (d) { return (state_ev.get(d.properties.name).winstate_inc > 0.85 || state_ev.get(d.properties.name).winstate_chal > 0.85 ? "rgba(0, 0, 0, 0.3)" : "rgba(0, 0, 0, 0.7)"); })
+              .attr("stroke-width", function (d) { return (state_ev.get(d.properties.name).winstate_inc > 0.85 || state_ev.get(d.properties.name).winstate_chal > 0.85 ? 1 : 2); })
+              .transition()
+              .duration(200)
+              .attr("r", (d) => Math.sqrt(state_ev.get(d.properties.name).ev) * 5 + 3);
+          });
 
-        svg.append("g")
-          .attr("transform", "translate(450,600)")
-          .append(() => legend({
-            color: d3.scaleOrdinal(["Safe red", "Likely red", "Tossup", "Likely blue", "Safe blue"], ["#cc3d3d", "#E7A09C", "#e6e6e6", "#8FCCE0", "#1a80c4"]),
-            tickSize: 0
-          }));
+        const text = gs.append("svg:text")
+          .text((d) => state_ev.get(d.properties.name).abbrev)
+          .attr("class", "abbrevs")
+          // .attr("fill", function(d) { return (state_ev.get(d.properties.name).winstate_inc > 0.85 || state_ev.get(d.properties.name).winstate_chal > 0.85 ? "white" : "white"); })
+          .attr("stroke", function (d) { return (state_ev.get(d.properties.name).winstate_inc > 0.85 || state_ev.get(d.properties.name).winstate_chal > 0.85 ? "rgba(0, 0, 0, 0.5)" : "rgba(0, 0, 0, 0.7)"); })
+          .attr("x", (d) => path.centroid(d)[0])
+          .attr("y", (d) => path.centroid(d)[1]);
+
+        // svg.append("g")
+        //   .attr("transform", "translate(450,600)")
+        //   .append(() => legend({
+        //     color: d3.scaleOrdinal(["Safe red", "Likely red", "Tossup", "Likely blue", "Safe blue"], ["#cc3d3d", "#E7A09C", "#e6e6e6", "#8FCCE0", "#1a80c4"]),
+        //     tickSize: 0
+        //   }));
+
+        map.append("text")
+          .text("Electoral Votes")
+          // .attr("stroke", "black")
+          // .attr("stroke-width", 2)
+          .attr("x", width / 2 - blockSize + 100)
+          .attr("y", 650)
+          // .attr("width", blockSize)
+          // .attr("height", blockSize)
+          .attr("fill", "black")
+          .attr("text-anchor", "middle")
+          .on("click", function (event) {
+            toggleMap("#e6e6e6");
+          });
+        
+        map.append("text")
+          .text("State Map")
+          // .attr("stroke", "blue")
+          // .attr("stroke-width", 2)
+          .attr("x", width / 2 - blockSize - 100)
+          .attr("y", 650)
+          // .attr("width", blockSize)
+          // .attr("height", blockSize)
+          .attr("fill", "black")
+          .attr("text-anchor", "middle")
+          .on("click", function (event) {
+            toggleMapReverse(function (d) { return fillColor(state_ev.get(d.properties.name).winstate_chal); });
+          });
+
+        map.append("rect")
+          .data(eastCoast.values())
+          .enter()
+          .append("g")
+          .attr("stroke", "white")
+          .attr("stroke-width", 2)
+          .attr("class", "east-coast")
+          .attr("transform", (d) => `translate(${width - 75}, ${250})`)
+          // .attr("x", width - 75)
+          // .attr("y", 250)
+          .attr("width", blockSize)
+          .attr("height", blockSize)
+          .attr("fill", (d) => fillColor(d.winstate_chal))
+          .on("mouseover", function (event, d, i) {
+            // d3.select(this).attr("stroke", "black").attr("stroke-width", 3).raise();
+            // tooltip.style("display", "block");
+            // let node = tooltip.node();
+            // node.innerHTML = tooltipContent(d, state_ev);
+            console.log("hi");
+          })
+          .on("mousemove", function (event, d) {
+            // let measuredWidth = tooltip.node().getBoundingClientRect().width
+            // tooltip
+            //   .style("top", (event.pageY + 30) + "px")
+            //   .style("left", (event.pageX - measuredWidth / 2) + "px");
+          })
+          .on("mouseout", function (event, d, i) {
+            // d3.select(this).attr("stroke", null).attr("stroke-width", 1).lower()
+            // tooltip.style("display", "none");
+          })
+          .on("click", function (event) {
+            console.log("yo");
+          });
 
       });
     }
 
     d3.csv(
-      "state_data.csv",
+      "state_data_2.csv",
       ({ state, ev, voteshare_inc, voteshare_chal, winstate_inc, winstate_chal, bins, abbrev }) => {
         return [state, { ev: +ev, voteshare_inc: +voteshare_inc, voteshare_chal: +voteshare_chal, winstate_inc: +winstate_inc, winstate_chal: +winstate_chal, bins, abbrev }];
       }
@@ -237,8 +362,12 @@
     //   .range(["#cc3d3d", "#E7A09C", "#e6e6e6", "#8FCCE0", "#1a80c4"])
 
     const fillColor = d3.scaleLinear()
-      .domain([0.05, 0.5, 0.95])
-      .range(["#cc3d3d", "#e6e6e6", "#1a80c4"])
+      .domain([0, 0.5, 1])
+      .range(["#EF3D3D", "#e6e6e6", "#1B6CE5"])
+
+    // const bubbleSize = d3.scaleThreshold()
+    //   .domain([10, 20, 35])
+    //   .range([1, 2, 3, 4]);
 
     const svg = d3.select("svg");
     const path = d3.geoPath();
@@ -272,7 +401,6 @@
       </tr>
     </tbody>
   </table>`};
-
   </script>
 </body>
 
