eliminate svg group

--- a/Block Viz/Stack.html
+++ b/Block Viz/Stack.html
@@ -80,7 +80,7 @@
 
       const fillColor = d3.scaleOrdinal()
         .domain(["safe_red", "likely_red", "tossup", "likely_blue", "safe_blue"])
-        .range(["#EF3D3D", "#E7A09C", "#e6e6e6", "#8FCCE0", "#1B6CE5"])
+        .range(["#EF3D3D", "#F8B4B4", "#e6e6e6", "#A3C4F5", "#1B6CE5"])
 
       function renderBoxes(data, {
         width,
