--- a/US Map/State Map.html
+++ b/US Map/State Map.html
@@ -91,77 +91,14 @@
 </head>
 
 <body>
-  <button type="button" onclick="toggleMap('#e6e6e6')">Bubbles</button>
+  <svg width="1000" height="700"></svg><br>
   <button type="button" onclick="toggleMapReverse(function (d) { return fillColor(state_ev.get(d.properties.name).winstate_chal); })">States</button>
-  <p> hello this is where we will put instructions, buttons and other cool stuff</p>
-  <svg width="1000" height="700"></svg>
+  <button type="button" onclick="toggleMap('#e6e6e6')">Bubbles</button>
+  <button type="button" onclick="toggleSwingState(state_ev)">Swing States</button>
   <div class="tooltip"></div>
   <script src="https://d3js.org/d3.v6.min.js"></script>
   <script src="https://d3js.org/topojson.v2.min.js"></script>
   <script>
-
-    // function legend({
-    //   color,
-    //   title,
-    //   tickSize = 6,
-    //   width = 300,
-    //   height = 44 + tickSize,
-    //   marginTop = 18,
-    //   marginRight = 0,
-    //   marginBottom = 16 + tickSize,
-    //   marginLeft = 0,
-    //   ticks = width / 64,
-    //   tickFormat,
-    //   tickValues
-    // } = {}) {
-
-    //   const svg = d3.create("svg")
-    //     .attr("width", width)
-    //     .attr("height", height)
-    //     .attr("viewBox", [0, 0, width, height])
-    //     .style("overflow", "visible")
-    //     .style("display", "block");
-
-    //   let tickAdjust = g => g.selectAll(".tick line").attr("y1", marginTop + marginBottom - height);
-    //   let x;
-
-    //   {
-    //     x = d3.scaleBand()
-    //       .domain(color.domain())
-    //       .rangeRound([marginLeft, width - marginRight]);
-
-    //     svg.append("g")
-    //       .selectAll("rect")
-    //       .data(color.domain())
-    //       .join("rect")
-    //       .attr("x", x)
-    //       .attr("y", marginTop)
-    //       .attr("width", Math.max(0, x.bandwidth() - 1))
-    //       .attr("height", height - marginTop - marginBottom)
-    //       .attr("fill", color);
-
-    //     tickAdjust = () => { };
-    //   }
-
-    //   svg.append("g")
-    //     .attr("transform", `translate(0,${height - marginBottom})`)
-    //     .call(d3.axisBottom(x)
-    //       .ticks(ticks, typeof tickFormat === "string" ? tickFormat : undefined)
-    //       .tickFormat(typeof tickFormat === "function" ? tickFormat : undefined)
-    //       .tickSize(tickSize)
-    //       .tickValues(tickValues))
-    //     .call(tickAdjust)
-    //     .call(g => g.select(".domain").remove())
-    //     .call(g => g.append("text")
-    //       .attr("x", marginLeft)
-    //       .attr("y", marginTop + marginBottom - height - 6)
-    //       .attr("fill", "currentColor")
-    //       .attr("text-anchor", "start")
-    //       .attr("font-weight", "bold")
-    //       .text(title));
-
-    //   return svg.node();
-    // }
 
     function initialize_map(state_ev) {
       d3.json("states-albers-10m.json").then(function (us) {
@@ -184,20 +121,30 @@
         const width = 1000;
         const blockSize = 25;
 
-        const map = svg.append("g");
-
-        const gs = map.append("g")
+        const map = svg.append("g")
           .attr("stroke", "white")
           .attr("stroke-width", 1)
           .attr("stroke-linecap", "round")
           .attr("stroke-linejoin", "round")
           .attr("class", "states")
-          .selectAll("g")
+
+        states = map.append("g")
+          .selectAll("path")
           .data(topojson.feature(us, us.objects.states).features)
           .enter()
-          .append("g")
+          .append("path")
+          .attr("d", path)
+          .attr("fill", function (d) { return fillColor(state_ev.get(d.properties.name).winstate_chal); })
           .on("mouseover", function (event, d, i) {
+            console.log(bubbleContainer.selectAll("circle").filter(data => (d == data)));
             d3.select(this).attr("stroke", "black").attr("stroke-width", 3).raise();
+            bubbleContainer.selectAll("circle").filter(data => (d.id == data.id))
+            .attr("stroke", "black")
+            .attr("stroke-width", 3)
+            .raise()
+            .transition()
+              .duration(200)
+              .attr("r", (d) => Math.sqrt(state_ev.get(d.properties.name).ev) * 5 + 5);
             tooltip.style("display", "block");
             let node = tooltip.node();
             node.innerHTML = tooltipContent(d, state_ev);
@@ -210,26 +157,32 @@
           })
           .on("mouseout", function (event, d, i) {
             d3.select(this).attr("stroke", null).attr("stroke-width", 1).lower()
+            bubbleContainer.selectAll("circle").filter(data => (d.id == data.id))
+            .attr("stroke", function (d) { return (state_ev.get(d.properties.name).winstate_inc > 0.85 || state_ev.get(d.properties.name).winstate_chal > 0.85 ? "rgba(0, 0, 0, 0.3)" : "rgba(0, 0, 0, 0.7)"); })
+            .attr("stroke-width", function (d) { return (state_ev.get(d.properties.name).winstate_inc > 0.85 || state_ev.get(d.properties.name).winstate_chal > 0.85 ? 1 : 2); })
+            .lower()
+            .transition()
+              .duration(200)
+              .attr("r", (d) => Math.sqrt(state_ev.get(d.properties.name).ev) * 5 + 3);
             tooltip.style("display", "none");
-            // bubbles.attr("stroke", "black").attr("stroke-width", 3)
           })
           .on("click", function (event) {
             console.log("yo");
+            // this is where we will make it redirect to the corresponding state page
           });
+          
+        bubbleContainer = map.append("g");
 
-        states = gs.append("path")
-          .attr("d", path)
-          // .attr("fill", "#e6e6e6")
-          .attr("fill", function (d) { return fillColor(state_ev.get(d.properties.name).winstate_chal); });
-
-        bubbles = gs.append("circle")
+        bubbles = bubbleContainer
+          .selectAll("circle")
           .data(topojson.feature(us, us.objects.states).features)
+          .enter()
+          .append("circle")
           .style("display", "none")
           .attr("class", "bubbles")
           .attr("fill", function (d) { return fillColor(state_ev.get(d.properties.name).winstate_chal); })
           .attr("stroke", function (d) { return (state_ev.get(d.properties.name).winstate_inc > 0.85 || state_ev.get(d.properties.name).winstate_chal > 0.85 ? "rgba(0, 0, 0, 0.3)" : "rgba(0, 0, 0, 0.7)"); })
           .attr("stroke-width", function (d) { return (state_ev.get(d.properties.name).winstate_inc > 0.85 || state_ev.get(d.properties.name).winstate_chal > 0.85 ? 1 : 2); })
-          // .attr("r", 25)
           .attr("r", (d) => Math.sqrt(state_ev.get(d.properties.name).ev) * 5 + 3)
           .attr("cx", (d) => path.centroid(d)[0])
           .attr("cy", (d) => path.centroid(d)[1] - 5)
@@ -237,9 +190,7 @@
             d3.select(this)
               .attr("stroke", "black")
               .attr("stroke-width", 3)
-              .transition()
-              .duration(200)
-              .attr("r", (d) => Math.sqrt(state_ev.get(d.properties.name).ev) * 5 + 5);
+             
           })
           .on("mouseout", function (event, d, i) {
             d3.select(this)
@@ -250,20 +201,16 @@
               .attr("r", (d) => Math.sqrt(state_ev.get(d.properties.name).ev) * 5 + 3);
           });
 
-        const text = gs.append("svg:text")
+        const text = map.append("g")
+          .selectAll("text")
+          .data(topojson.feature(us, us.objects.states).features)
+          .enter()
+          .append("text")
           .text((d) => state_ev.get(d.properties.name).abbrev)
           .attr("class", "abbrevs")
-          // .attr("fill", function(d) { return (state_ev.get(d.properties.name).winstate_inc > 0.85 || state_ev.get(d.properties.name).winstate_chal > 0.85 ? "white" : "white"); })
           .attr("stroke", function (d) { return (state_ev.get(d.properties.name).winstate_inc > 0.85 || state_ev.get(d.properties.name).winstate_chal > 0.85 ? "rgba(0, 0, 0, 0.5)" : "rgba(0, 0, 0, 0.7)"); })
           .attr("x", (d) => path.centroid(d)[0])
           .attr("y", (d) => path.centroid(d)[1]);
-
-        // svg.append("g")
-        //   .attr("transform", "translate(450,600)")
-        //   .append(() => legend({
-        //     color: d3.scaleOrdinal(["Safe red", "Likely red", "Tossup", "Likely blue", "Safe blue"], ["#cc3d3d", "#E7A09C", "#e6e6e6", "#8FCCE0", "#1a80c4"]),
-        //     tickSize: 0
-        //   }));
 
         map.append("rect")
           .data(eastCoast.values())
@@ -336,13 +283,43 @@
     let state_ev;
     let states;
     let bubbles;
+    let bubbleContainer;
 
     const toggleMap = function (color) {
+      // svg.attr("opacity", 1)
+      // svg.transition()
+      //     .duration(800)
+      //     .ease(d3.easeLinear)
+      //     .attr("opacity", 0)
+      // svg.transition()
+      //     .duration(800)
+      //     .ease(d3.easeLinear)
+      //     .attr("opacity", 1)
       states.style("fill", color)
       //states.style("display", "none")
       bubbles.style("display", "block")
     };
     const toggleMapReverse = function (color) {
+      // svg.attr("opacity", 1)
+      // svg.transition()
+      //     .duration(800)
+      //     .ease(d3.easeLinear)
+      //     .attr("opacity", 0)
+      // svg.transition()
+      //     .duration(800)
+      //     .ease(d3.easeLinear)
+      //     .attr("opacity", 1)
+      states.style("fill", color)
+      //states.style("display", "none")
+      bubbles.style("display", "none")
+    };
+
+    const toggleSwingState = function (d) {
+      if (state_ev.get(d.properties.name).winstate_inc > 0.85 || state_ev.get(d.properties.name).winstate_chal > 0.85)
+        return true;
+        states.style("fill", "black");
+    };
+    const toggleSwingStateReverse = function (d) {
       states.style("fill", color)
       //states.style("display", "none")
       bubbles.style("display", "none")
